@@ -1,5 +1,6 @@
 package com.ahmetaksunger.ecommerce.service;
 
+import com.ahmetaksunger.ecommerce.dto.converter.ProductVMConverter;
 import com.ahmetaksunger.ecommerce.dto.request.product.CreateProductRequest;
 import com.ahmetaksunger.ecommerce.dto.request.product.UpdateProductRequest;
 import com.ahmetaksunger.ecommerce.dto.response.*;
@@ -20,6 +21,7 @@ import org.springframework.stereotype.Service;
 import java.math.BigDecimal;
 import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,6 +29,7 @@ public class ProductManager implements ProductService {
 
     private final ProductRepository productRepository;
     private final MapperService mapperService;
+    private final ProductVMConverter productVMConverter;
     private final CategoryService categoryService;
     private final ProductRules productRules;
 
@@ -37,9 +40,8 @@ public class ProductManager implements ProductService {
         product.setSeller((Seller) loggedInUser);
         List<Category> categories = categoryService.getCategoriesByIds(createProductRequest.getCategoryIds());
         product.setCategories(categories);
-        var response = mapperService.forResponse().map(productRepository.save(product), ProductVM.class);
-        response.setSeller(mapperService.forResponse().map(product.getSeller(), SellerVM.class));
-        return response;
+
+        return productVMConverter.convert(productRepository.save(product));
     }
 
     @Override
@@ -57,8 +59,7 @@ public class ProductManager implements ProductService {
                         .toList()
         );
         product.setCategories(dbCategories);
-        product.setUpdatedAt(new Date());
-        return mapperService.forResponse().map(productRepository.save(product), ProductVM.class);
+        return productVMConverter.convert(productRepository.save(product));
     }
 
     @Override
@@ -76,8 +77,7 @@ public class ProductManager implements ProductService {
                         toList()
         );
         product.setCategories(dbCategories);
-        product.setUpdatedAt(new Date());
-        return mapperService.forResponse().map(productRepository.save(product), ProductVM.class);
+        return productVMConverter.convert(productRepository.save(product));
     }
 
     /**
@@ -123,7 +123,7 @@ public class ProductManager implements ProductService {
         }
 
         return productRepository.findAll(specification, pageable)
-                .map(product -> mapperService.forResponse().map(product, ProductVM.class));
+                .map(productVMConverter::convert);
     }
 
     @Override
@@ -222,24 +222,21 @@ public class ProductManager implements ProductService {
             product.setLogo(updateProductRequest.getLogo());
         }
 
-        return mapperService.forResponse().map(productRepository.save(product), ProductVM.class);
+        return productVMConverter.convert(productRepository.save(product));
     }
 
     /**
      * Retrieves the top ten most ordered products from the {@link ProductRepository#getTop10MostOrderedProducts()}
-     * Maps them to a list of {@link ProductOrderInfoDto}, and returns.
+     * Maps them to a list of {@link ProductVM}, and returns.
      *
-     * @return {@link List<ProductOrderInfoDto>}
+     * @return {@link List<ProductVM>}
      */
     @Override
-    public List<ProductOrderInfoDto> getTop10MostOrderedProducts() {
+    public List<ProductVM> getTop10MostOrderedProducts() {
         List<ProductOrderInfo> productOrderInfos = productRepository.getTop10MostOrderedProducts();
 
         return productOrderInfos.stream()
-                .map(productOrderInfo -> mapperService
-                        .forResponse()
-                        .map(productOrderInfo, ProductOrderInfoDto.class))
-                .toList();
+                .map(productVMConverter::convert).collect(Collectors.toList());
     }
 
 }
